@@ -1,17 +1,22 @@
 DIST CGI.pm-3.25.tar.gz 235166 RMD160 e0d2163ed45e25b06be0c5e941384237854b58fb SHA1 f16007f3bcf35864c940f659178c6e2bf164ae99 SHA256 948b0e975cc5ad40c98f02a819b3beee1b33c4b2db9274d12d7f59a45169dfb6
 DIST CGI.pm-3.27.tar.gz 236822 RMD160 b31fb63811b5da14f3ac5f2b77d638d736e85496 SHA1 874497c3be6de3fb5e731feab0ef78f8f93293f1 SHA256 dcc87b9093c68440ebae418c153080c8b3888617ae9824140dafe93ed63cafe9
-EBUILD CGI-3.25.ebuild 633 RMD160 3e926f843127d9b2a4867bd788e0e25ee9f453e9 SHA1 06b1b964253c643c2f1fc6f9fbe8d3d2d9e873f1 SHA256 ad971b0ba35d679cdef64741ebe4ae4ce974997e732eb568b5d21c87cc63c4b1
-MD5 f71ac11e284c7aa211888feb76de0918 CGI-3.25.ebuild 633
-RMD160 3e926f843127d9b2a4867bd788e0e25ee9f453e9 CGI-3.25.ebuild 633
-SHA256 ad971b0ba35d679cdef64741ebe4ae4ce974997e732eb568b5d21c87cc63c4b1 CGI-3.25.ebuild 633
-EBUILD CGI-3.27.ebuild 650 RMD160 f75d358d3506c28552c367027a8a4aa99c7fa492 SHA1 e33e2a61dac72d811693cb0c03e130503164c8e1 SHA256 6636392cd593608425ab031f5e47baa6ca2d5cb75a0b8e6de6de99670e8a4253
-MD5 f4f9011e1bcb046e6800139c811a29ab CGI-3.27.ebuild 650
-RMD160 f75d358d3506c28552c367027a8a4aa99c7fa492 CGI-3.27.ebuild 650
-SHA256 6636392cd593608425ab031f5e47baa6ca2d5cb75a0b8e6de6de99670e8a4253 CGI-3.27.ebuild 650
-MISC ChangeLog 10414 RMD160 1a3b35f952d2e7a9789117e82c6414c7f6f6f441 SHA1 b49495be4a3530f0a52d9f2c0b320ddccc8b5233 SHA256 b452d98dc76584a3b261f5c018e8b6f0dccb6af0d9ccc0fb407283125428d24f
-MD5 52001ed55bf6c9d1a685f91d1d4562e9 ChangeLog 10414
-RMD160 1a3b35f952d2e7a9789117e82c6414c7f6f6f441 ChangeLog 10414
-SHA256 b452d98dc76584a3b261f5c018e8b6f0dccb6af0d9ccc0fb407283125428d24f ChangeLog 10414
+DIST CGI.pm-3.28.tar.gz 236940 RMD160 4a9bf829355b5178f025a4c5dce9fbea7044b0b1 SHA1 d8cb0dd3aa99f52a8cde9f0be9465c0e8bec844e SHA256 3d84f3bbcd64ca557a69e6c7df37ce2d37984bdbdd4b104583ce1db863d74bf5
+EBUILD CGI-3.25.ebuild 635 RMD160 b4894730b8290fa9cff5edbe6a7832e4875cb9a6 SHA1 a7bfc0165a6800adfcd12f011e0dbc82f199cac3 SHA256 96ce8e87ec7d996fac56dd363e5e740fc1bf210fcae6b44ffbcae1d4212150d8
+MD5 7f238743c9a407f3c3cf72a8b83f8581 CGI-3.25.ebuild 635
+RMD160 b4894730b8290fa9cff5edbe6a7832e4875cb9a6 CGI-3.25.ebuild 635
+SHA256 96ce8e87ec7d996fac56dd363e5e740fc1bf210fcae6b44ffbcae1d4212150d8 CGI-3.25.ebuild 635
+EBUILD CGI-3.27.ebuild 647 RMD160 49a33c077c35103c83687d32afed12eacfab912b SHA1 04be5444309efdb31d12e1432dd7a3505b7a6ba4 SHA256 e01e9dacea9d1923d7dd3b62df48a86101e31ea746e3bcd2a8082bd16b185527
+MD5 ce7a0572c70464e8af7598f85af53d59 CGI-3.27.ebuild 647
+RMD160 49a33c077c35103c83687d32afed12eacfab912b CGI-3.27.ebuild 647
+SHA256 e01e9dacea9d1923d7dd3b62df48a86101e31ea746e3bcd2a8082bd16b185527 CGI-3.27.ebuild 647
+EBUILD CGI-3.28.ebuild 614 RMD160 342706431b62cfbff0cbae7b1a97b92efefb35a6 SHA1 99a9ce3d86ed81524a04167d83bc763af0a4147c SHA256 44153f07965870aabb4899730e40da01cdc910076f38df0e5bd20a6e29b44ff0
+MD5 a66cb704e08ea0b393e8723adfbe6f05 CGI-3.28.ebuild 614
+RMD160 342706431b62cfbff0cbae7b1a97b92efefb35a6 CGI-3.28.ebuild 614
+SHA256 44153f07965870aabb4899730e40da01cdc910076f38df0e5bd20a6e29b44ff0 CGI-3.28.ebuild 614
+MISC ChangeLog 10613 RMD160 532d6bbc2b2057c4b84199b868103b7070c2a597 SHA1 56222dda2ffbeaee066794175e1c3f35fb234d19 SHA256 819607fe06507f138b7d204d9ccff11320bb73340943cf2bbe0d69775f7bbe5e
+MD5 c0b7f286b58f635daf9377afe21c91d9 ChangeLog 10613
+RMD160 532d6bbc2b2057c4b84199b868103b7070c2a597 ChangeLog 10613
+SHA256 819607fe06507f138b7d204d9ccff11320bb73340943cf2bbe0d69775f7bbe5e ChangeLog 10613
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -22,3 +27,6 @@ SHA256 13b91366d7218b456e6b68c7c670e24dad2a72bf27f9b626062bb6eecca0d3c1 files/di
 MD5 a2448ba7b228f265324270fc11eabb9f files/digest-CGI-3.27 235
 RMD160 8227e87f672812f5fafad870ed5a8a66a75ad2dd files/digest-CGI-3.27 235
 SHA256 9b6ba9b5de3248aefd7160a8447a2391972a59a0f62a77218201235f564dfcff files/digest-CGI-3.27 235
+MD5 a983a89570872192979dcf5ea93a61a4 files/digest-CGI-3.28 235
+RMD160 6cd7ac117fd958a5c5bb98b501ce3624e9133b47 files/digest-CGI-3.28 235
+SHA256 8e0ace9a8dc20530a39720c3d9121a0117512a0b2ff677eba271d4b1a1c14dc1 files/digest-CGI-3.28 235
