@@ -1,0 +1,3 @@
+MD5 01114c821dd1b268d7c880397ad9aec6 CGI.pm-3.28.tar.gz 236940
+RMD160 4a9bf829355b5178f025a4c5dce9fbea7044b0b1 CGI.pm-3.28.tar.gz 236940
+SHA256 3d84f3bbcd64ca557a69e6c7df37ce2d37984bdbdd4b104583ce1db863d74bf5 CGI.pm-3.28.tar.gz 236940
