@@ -1,6 +1,14 @@
 # ChangeLog for perl-core/CGI
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/CGI/ChangeLog,v 1.40 2007/04/09 16:57:28 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/CGI/ChangeLog,v 1.42 2007/04/16 11:12:15 mcummings Exp $
+
+*CGI-3.28 (16 Apr 2007)
+
+  16 Apr 2007; Michael Cummings <mcummings@gentoo.org> +CGI-3.28.ebuild:
+  Version bump
+
+  15 Apr 2007; Markus Rothe <corsair@gentoo.org> CGI-3.25.ebuild:
+  Stable on ppc64
 
   09 Apr 2007; Michael Cummings <mcummings@gentoo.org> CGI-3.27.ebuild:
   Marking stable amd64
